--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "axios": "^0.27.2",
     "bootstrap": "^5.1.3",
     "dotenv": "^16.0.1",
+    "jwt-decode": "^3.1.2",
+    "moment": "^2.29.3",
     "react": "^18.1.0",
     "react-bootstrap": "^2.3.1",
     "react-dom": "^18.1.0",
